# cookbook

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ci  Makefile  README.md  hf_deploy.yaml  pyproject.toml  semantic_requirements.txt
.github/workflows/: ci.yml  docker.yml  recipe-validation.yml
cookbooks/: agent_builder.yaml  auto_gpu_selector.yaml  diffusion_training.yaml  graph_neural_network.yaml  llm_evaluation.yaml  llm_finetune.yaml  llm_inference_server.yaml  multimodal_vision.yaml  rag_faiss_pipeline.yaml  rag_pipeline.yaml  reinforcement_learning.yaml  semantic_search.yaml  time_series_forecasting.yaml  voice_synthesis.yaml
ctxcook/: __init__.py  cli.py  config.py  exporter.py  generator.py  notebook.py  parser.py  requirements.py  validator.py
scripts/: validate_cookbooks.py
templates/: basic_notebook_template.j2  colab_notebook_template.j2  colab_template.ipynb  docker_template.j2  hf_deploy_template.j2
tests/: test_config.py  test_generator.py  test_parser.py  test_requirements.py  test_validator.py
